--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       name="keywords"
       content="portfolio, web developer, frontend, react, javascript"
     />
-    <meta name="author" content="Your Name" />
+    <meta name="author" content="Sajad Noori" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Add your favicon.ico to the public folder and uncomment the line below -->
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +25,7 @@
       rel="stylesheet"
     />
 
-    <title>Your Name | Web Developer</title>
+    <title>Sajad Noori | Web Developer</title>
 
     <!-- Theme initialization script to prevent flash -->
     <script>
